# advent-of-code

./: .gitignore  Cargo.toml  build.rs
aoc_framework/: Cargo.toml  build.rs
aoc_framework/src/: bin.rs  errors.rs  lib.rs  prelude.rs  template.rs
aoc_framework/src/framework/: puzzle.rs
aoc_framework/src/utils/: display_string.rs  graph.rs  gridmap.rs  mod.rs  numerics.rs
aoc_framework/src/year2015/: day02.rs
aoc_framework/src/year2021/: day03.rs  day04.rs  day07.rs  day08.rs  day11.rs  day16.rs  day19.rs
aoc_framework/src/year2022/: day06.rs  day07.rs  day09.rs  day17.rs  day19.rs  day22.rs
aoc_macros/: Cargo.toml
aoc_macros/src/: extensions.rs  impl_collect_all_solutions.rs  impl_derive_year_day.rs  lib.rs
aoc_runner/: Cargo.toml
aoc_runner/src/: bin.rs
aoc_utils/: Cargo.toml
aoc_utils/src/: direction.rs  fraction.rs  geometry.rs  graph.rs  gridmap.rs  lib.rs  prelude.rs
aoc_utils/src/extensions/: char_iter_loc.rs  collect_bits.rs  exactly_one.rs  mod.rs  range_intersects.rs
puzzles/year2015/: Cargo.toml
puzzles/year2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
puzzles/year2021/: Cargo.toml  build.rs
puzzles/year2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
puzzles/year2022/: Cargo.toml
puzzles/year2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
puzzles/year2023/: Cargo.toml
puzzles/year2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
scripts/: download_inputs.py  use_day01_as_template.py  utils.py
src/: bin.rs  errors.rs  lib.rs
src/framework/: downloader.rs  mod.rs  puzzle.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
src/utils/: algebra.rs  colors.rs  downloader.rs  errors.rs  file_parsing.rs  geometry.rs  graph.rs  gridmap.rs  iter_solutions.rs  mod.rs  numerics.rs  pause.rs  puzzle.rs
src/utils/algebra/: display.rs  expression.rs  mod.rs  simplify.rs  solve.rs  visit.rs
src/utils/extensions/: mod.rs  take_while_inclusive.rs
src/year2015/: day01.rs
src/year2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
src/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs  template.rs
templates/: year_build.rs  year_lib.rs
