workspace = { members = ["aoc_macros"] }
[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Eldritch Cheese <eldritch.cheese@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc"
path = "src/bin.rs"

[lib]
name = "aoc"

[dependencies]
aoc_macros = { path = "./aoc_macros" }

itertools = "0.10.3"
itertools-num = "*"
regex = "1"
indicatif = "*"
console = "*"
structopt = "0.3.21"
clap = "*"
reqwest = {version = "0.11.7", features=["blocking"]}
ratelimit = "*"
priority-queue = "*"
num = "*"
bit-set = "0.5.3"

html5ever = "*"
markup5ever_rcdom = "*"

[build-dependencies]
proc-macro2 = "*"
quote = "*"
prettyplease = "*"
syn = {version = "*", features = ["full","extra-traits", "fold", "visit"]}
