[package]
name = "aoc_framework"
version = "0.1.0"
authors = ["Eldritch Cheese <eldritch.cheese@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc_framework"

[dependencies]
aoc_macros = { path = "../aoc_macros" }

itertools = "*"

reqwest = {version = "*", features=["blocking"]}
ratelimit = "*"
html5ever = "*"
markup5ever_rcdom = "*"

[build-dependencies]
itertools = "*"
