[package]
name = "aoc_utils"
version = "0.1.0"
authors = ["Eldritch Cheese <eldritch.cheese@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc_utils"


[dependencies]
aoc_framework = { path = "../aoc_framework" }

itertools = "*"
itertools-num = "*"
priority-queue = "*"
num = "*"
bit-set = "*"
thiserror = "*"