[package]
name = "aoc_year2022"
version = "0.1.0"
authors = ["Eldritch Cheese <eldritch.cheese@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc_year2022"

[dependencies]
aoc_macros = { path = "../../aoc_macros" }
aoc_framework = { path = "../../aoc_framework" }
aoc_utils = { path = "../../aoc_utils" }

itertools = "*"
console = "*"
num = "*"
bit-set = "*"
